tests/filled-param/invalid-specified-as-unfilled.stderr
error[E0277]: the trait bound `ZeroMod8: TotalSizeIsNotMultipleOfEightBits` is not satisfied
  --> tests/filled-param/invalid-specified-as-unfilled.rs:5:1
   |
5  | / pub struct UnfilledBitfield {
6  | |     a: B8,
7  | |     b: u8,
8  | | }
   | |_^ the trait `TotalSizeIsNotMultipleOfEightBits` is not implemented for `ZeroMod8`
   |
   = help: the following other types implement trait `TotalSizeIsNotMultipleOfEightBits`:
             FiveMod8
             FourMod8
             OneMod8
             SevenMod8
             SixMod8
             ThreeMod8
             TwoMod8
note: required by a bound in `CheckTotalSizeIsNotMultipleOf8`
  --> src/private/checks.rs
   |
   |     <Self::Size as RenameSizeType>::CheckType: TotalSizeIsNotMultipleOfEightBits,
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckTotalSizeIsNotMultipleOf8`
